# mcp-server-zep-cloud

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
config/: requirements.txt
core/: run_server.py  zep_cloud_client.py  zep_cloud_server.py
hooks/: sync_memory_to_zep.py
scripts/: install.py
tests/: test_server_tools.py  test_v3_compatibility.py
